cncProd/force-app/main/default/objects/Stock_Promotion__c/Stock_Promotion__c.object-meta.xml
<CustomObject>
    <label>Stock Promotion</label>
    <nameField>
        <label>System Commcase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>