cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price__c</fullName>
    <label>Actual (List) Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>