cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>If(Showroom__c != null, Showroom__r.Address_Line_1__c &amp;&apos;,&apos; &amp;Showroom__r.City__c&amp;&apos;,&apos; &amp;Showroom__r.Postal_Code__c, &apos;&apos;)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>