cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>