cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>