cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/isSold__c.field-meta.xml
<CustomField>
    <fullName>isSold__c</fullName>
    <formula>Stock_Vehicle_Master__r.IsSold__c</formula>
    <label>is Sold</label>
    <type>Checkbox</type>
</CustomField>