cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom</label>
    <referenceTo>Showroom__c</referenceTo>
    <relationshipLabel>Stock Promotions</relationshipLabel>
    <relationshipName>Stock_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>