cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Stock_Vehicle_Master__c</fullName>
    <label>Stock Vehicle Master</label>
    <referenceTo>Vehicle_Master2__c</referenceTo>
    <relationshipLabel>Stock Promotions</relationshipLabel>
    <relationshipName>Stock_Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>