cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Cars</fullName>
            </value>
            <value>
                <fullName>Promotional Cars</fullName>
            </value>
            <value>
                <fullName>Exclusive car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>