cncProd/force-app/main/default/objects/Stock_Promotion__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <formula>Text(Stock_Vehicle_Master__r.Year_Of_Manufacture__c)</formula>
    <label>Year of Manufacture</label>
    <type>Text</type>
</CustomField>