cncProd/force-app/main/default/objects/Stock_Promotion__c/listViews/Citroen_Promo_list.listView-meta.xml
<ListView>
    <fullName>Citroen_Promo_list</fullName>
    <columns>NAME</columns>
    <columns>Stock_Promotion_Status__c</columns>
    <columns>Stock_Vehicle_Master__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Vehicle_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promotion_Type__c</field>
        <operation>equals</operation>
        <value>CIT Warehouse</value>
    </filters>
    <label>Citroen Promo list</label>
</ListView>